# RUST-train-serve-boilerplate

./: .env.example  .gitignore  .tmp_container_id  Cargo.toml  Makefile  README.md  streamlit_app.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
docker/: .dockerignore  dockerfile  dockerfile.streamlit
frontend/: requirements.txt  streamlit_app.py
house-price-predictor/modules/: aws.rs
src/: aws.rs  data.rs  lib.rs  main.rs  model.rs
src/modules/: aws.rs  data.rs  model.rs
