[package]
name = "house-price-predictor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
anyhow = "1.0.93"
cmake = "0.1"
polars = { version = "0.44.2", features = ["csv", "ndarray"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
xgboost = "0.1.4"

[build-dependencies]
cmake = "0.1"
